--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:dev": "nest start && cd user && nest start",
     "start:debug": "nest start --debug --watch",
     "start:test": "npm i && sudo docker-compose up -d && nest start",
-    "start:prod": "(cd user && node dist/main) & node dist/main",
+    "start:prod": "npm i && concurrently --kill-others \"npm run api-gateway\" \"npm run user\" \"npm run category\" \"npm run expense\" \"npm run income\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
