added the nest start script

--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "postinstall": "npm run prestart:prod",
-    "api-gateway": "node dist/src/main",
-    "user":"cd user && npm i && node dist/main",
-    "category": "cd category && npm i && node dist/main",
-    "expense": "cd expense && npm i && node dist/main",
-    "income": "cd income && npm i && node dist/main",
+    "api-gateway": "node nest start",
+    "user": "cd user && npm i && nest start",
+    "category": "cd category && npm i && nest start",
+    "expense": "cd expense && npm i && nest start",
+    "income": "cd income && npm i && nest start",
     "start": "npm i && concurrently --kill-others \"npm run api-gateway\" \"npm run user\" \"npm run category\" \"npm run expense\" \"npm run income\"",
     "start:dev": "nest start && cd user && nest start",
     "start:debug": "nest start --debug --watch",
@@ -41,6 +40,7 @@
     "class-validator": "^0.13.2",
     "dotenv": "^16.0.2",
     "now": "^21.0.1",
+    "npm-run-all": "^4.1.5",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
