--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:test": "npm i && sudo docker-compose up -d && nest start",
-    "start:prod": "npm i && node_modules/.bin/concurrently --kill-others \"npm run api-gateway\" \"npm run user\"",
+    "start:prod": "npm run api-gateway",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
